2004-08-02  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-plugin-manager.c: fix previous fix.

2004-07-30  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-plugin-manager.c: avoid multiple about dialogs.
	* gedit-commands.c: remove unuseful scaling of the about pixbuf.

2004-07-29  Padraig O'Briain  <padraig.obriain@sun.com>

	* dialogs/uri.glade: Move labelled-by relation from GtkEntry 
	to GtkCombo. Fixes bug #145138

2004-07-19  Paolo Maggi  <paolo.maggi@polito.it>

	Fixes bug #135452: "Failed to lock" -> recent files disappear

	* recent-files/egg-recent-model.c (egg_recent_model_lock_file):
	Attempt to lock the file 5 times, waiting a random interval (< 1 second)
	in between attempts.
	(egg_recent_model_unlock_file): cosmetic changes

2004-07-16  Vinay  <vinay.mandyakoppal@wipro.com>

	* gedit/gedit2.c (gedit_load_file_list):
	* gedit/gedit-file.c (create_new_file) (gedit_file_open_uri_list_real):
	* gedit/gedit-utils.[ch]:
	Removes alert and file will not be saved while creating a non-exsistent
	file from command line. Fixes #135709.

2004-07-16  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.[ch]: allow to specify the encoding when opening a
	uri list.
	* gedit-mdi.c:
	* gedit-window-server.c: update the callers.
	* gedit2.c: add the --encoding option.

2004-07-14  Paolo Maggi  <paolo.maggi@polito.it>

	* bonobo-mdi.c (bonobo_mdi_n_views_for_window):
	* bonobo-mdi.h (bonobo_mdi_n_views_for_window): rename
	bonobo_mdi_n_children_for_window to bonobo_mdi_n_views_for_window

	* gedit-file.c (gedit_file_close) (gedit_file_close_all):
	always call gedit_mdi_set_active_window_verbs_sensitivity (fix 
	bug #142091). Based on a patch by Madhan Raj M <raj_madan@rediffmail.com>

	* gedit-mdi-child.c (menu_show): 
	s/bonobo_mdi_n_children_for_window/bonobo_mdi_n_views_for_window
	* gedit-mdi.c (gedit_mdi_set_active_window_verbs_sensitivity): ditto

2004-07-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.[ch]: