@@ -1,3 +1,8 @@
+2004-08-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* dialogs/gedit-close-confirmatoion-dialog.c: 
+	s/definitively/permanently.
+
 2004-08-02  Paolo Borelli  <pborelli@katamail.com>
 
 	* dialogs/gedit-plugin-manager.c: fix previous fix.
